glass project has been completed

--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
      <link rel="stylesheet" href="style.css">
+
+     <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
 </head>
 <body>
     <main>
@@ -59,9 +63,9 @@
                     <h2 class="parcentage">60%</h2>
                 </div>
                 <div class="card">
-                    <img src="./images/assassins.png" alt="" srcset="">
+                    <img src="./images/sackboy.png" alt="" srcset="">
                     <div class="card-info">
-                        <h2>Assassins creeds</h2>
+                        <h2>Sackboy A Great Advanture</h2>
                         <p>PS5 Version</p>
                         <div class="progress"></div>
                     </div>
@@ -69,9 +73,9 @@
                 </div>
                 
                 <div class="card">
-                    <img src="./images/assassins.png" alt="" srcset="">
+                    <img src="./images/spiderman.png" alt="" srcset="">
                     <div class="card-info">
-                        <h2>Assassins creeds</h2>
+                        <h2>Spiderman Miles Morales</h2>
                         <p>PS5 Version</p>
                         <div class="progress"></div>
                     </div>
